# paper-socket-client

./: CHANGELOG.md  Main.hs  Makefile  paper-socket-client.cabal  paper-socket-client.cabal.raw
c/: Makefile
c/src/: lib.c
src/: MyLib.hs
